para_se_basear/Trab_Anna/CodeGeneration/Tests/Error/28.AMZ
// ok
int func1(int a) {
	a = 10;
	return 0;
}

// ok
int func2() {
	int b;
	b = 1;
	return 0;
}

// error
int func3(int a) {
	b = 10; // wrong
	return 1;
}

// error
void func() {
	int i = 0;

	for (int j = 0 ; j < 5; j = j + 1) {
		for (int k = 0 ; k < 3; k = k + 1) {
			for (int l = 0 ; l < 2; l = l + 1) {
				i = i + 1;
				while ( i < 10 ) {
					i = i + 1; // ok
				}
				int m = 0;
			}
			m = 1; // error
		}
	}
	return;
}
